--- a/styles.css
+++ b/styles.css
@@ -321,10 +321,10 @@ footer p {
 }
 /* Responsive Design */
 @media (max-width: 768px) {
-.header-right{
-  top: 2px;
-  right: 2px;
-  font-size: 12px;
+  .header-right{
+    top: 2px;
+    right: 2px;
+    font-size: 12px;
 }
   .temple-name {
       font-size: 2rem;
@@ -357,6 +357,7 @@ footer p {
       width: 80%;
       text-align: center;
   }
+}
   
   /* Zoom in/out scaling */
 body.zoomed-in {
