--- a/styles.css
+++ b/styles.css
@@ -528,46 +528,74 @@ header.scrolled {
 }
 
 /* Popup Card Styles */
+/* Default Styles (Desktop) */
 .popup-card {
-  display: none;
-  position: fixed;
-  z-index: 999;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.8);
-  text-align: center;
-  padding-top: 100px;
-  overflow-y: auto;
+    display: none;
+    position: fixed;
+    z-index: 999;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.8);
+    text-align: center;
+    padding-top: 50px;
 }
 
 .popup-content {
-  background-color: white;
-  margin: auto;
-  padding: 20px;
-  border: 1px solid #888;
-  width: 80%;
-  border-radius: 10px;
-  overflow-y: auto;
-  
+    background-color: white;
+    margin: auto;
+    padding: 15px;
+    border: 1px solid #888;
+    width: 60%;
+    height: 60%;
+    border-radius: 10px;
+    overflow-y: auto;
+    max-height: 80%;
+    position: relative;
 }
 
 .popup-content .close {
-  color: #aaa;
-  font-size: 28px;
-  font-weight: bold;
-  position: absolute;
-  top: 10px;
-  right: 20px;
-  cursor: pointer;
+    color: #aaa;
+    font-size: 24px;
+    font-weight: bold;
+    position: absolute;
+    top: 10px;
+    right: 20px;
+    cursor: pointer;
 }
 
 .popup-content .close:hover {
-  color: #000;
+    color: #000;
 }
 
+/* Responsive Styles for Tablets */
+@media (max-width: 768px) {
+    .popup-content {
+        width: 80%;
+        height: 70%;
+        padding: 10px;
+        font-size: 14px; /* Adjust font size */
+    }
 
+    .popup-content .close {
+        font-size: 20px;
+    }
+}
+
+/* Responsive Styles for Mobile Devices */
+@media (max-width: 480px) {
+    .popup-content {
+        width: 90%;
+        height: 75%;
+        padding: 8px;
+        font-size: 12px; /* Adjust font size */
+    }
+
+    .popup-content .close {
+        font-size: 18px;
+    }
+}
 
 
 #nearby-places {
