--- a/styles.css
+++ b/styles.css
@@ -154,6 +154,15 @@ header {
   border-radius: 8px;
 }
 
+#see-more-btn {
+  background-color: #0940e6c9;
+  color: #fff;
+  text-decoration: none;
+  padding: 10px 15px;
+  border: none;
+  cursor: pointer;
+  border-radius: 5px;
+}
 /* Gallery Section */
 .gallery-section {
   margin: 0;
