--- a/styles.css
+++ b/styles.css
@@ -570,6 +570,7 @@ header.scrolled {
         padding: 8px;
         font-size: 12px; /* Adjust font size */
     }
+  
     .header-right {
       margin-right: 10px;
       margin-top: 10px;
@@ -676,6 +677,7 @@ header.scrolled {
 
   .temple-header-image {
       width: 120px;
+     margin-left: 200px;
   }
 
   .temple-name {
