--- a/styles.css
+++ b/styles.css
@@ -57,7 +57,7 @@ header {
   height: 100%;
   background-color: #2980b9;
   padding: 20px;
-  transition: right 0.5s ease;
+  transition: right 0.8s ease;
   z-index: 1000;
   
 }
@@ -659,10 +659,7 @@ header.scrolled {
   margin: 5px 0 0 0;
 }
 
-.header-right {
-  position: absolute;
-  right: 10px;
-  top: 20px;
+
 }
 
 /* Responsive Code */
@@ -675,6 +672,7 @@ header.scrolled {
 
   .temple-header-image {
       width: 120px;
+     margin-left: 150px;
      
   }
 
