--- a/styles.css
+++ b/styles.css
@@ -57,7 +57,7 @@ header {
   height: 100%;
   background-color: #2980b9;
   padding: 20px;
-  transition: right 0.8s ease;
+  transition: right 0.6s ease;
   z-index: 1000;
   
 }
@@ -675,8 +675,9 @@ header.scrolled {
   }
 
   .temple-header-image {
-      width: 120px;
-     margin-left: 150px;
+    width: 120px;
+    height: 100px;
+    margin-left: 150px;
      
   }
 
