--- a/styles.css
+++ b/styles.css
@@ -32,7 +32,7 @@ header {
   right: 10px;
   background: (255, 255, 255, 0); 
   backdrop-filter: blur(-5px);
-  border: 3px solid rgb(173, 198, 230);
+  border: 2px solid rgb(173, 198, 230);
   border-radius: 5px;
   width: 50px;
   height: auto;
@@ -721,11 +721,11 @@ header.scrolled {
   }
 
   .header-right {
-    top: 5px;
-    right: 5px;
+    margin-left: 20px;
+    margin-top: 25px;
     background: (255, 255, 255, 0);
     backdrop-filter: blur(-5px);
-    border: 3px solid rgb(173, 198, 230);
+    border: 2px solid rgb(173, 198, 230);
     border-radius: 5px;
   }
 
