--- a/styles.css
+++ b/styles.css
@@ -30,7 +30,7 @@ header {
   position: absolute;
   top: 10px;
   right: 10px;
-  background: (255, 255, 255, 0); 
+  background: rgb(165, 136, 136); 
   border: 2px solid rgb(173, 198, 230);
   border-radius: 5px;
   width: 50px;
