--- a/styles.css
+++ b/styles.css
@@ -334,7 +334,7 @@ header {
     font-size: 12px;
 }
   .temple-name {
-      font-size: 2rem;
+      font-size: 20px;
   }
 
   .about-section img {
